Added support for Java 16